<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddRecipeFragment">

    <EditText
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:hint="@string/title"
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <EditText
        android:layout_below="@id/edit_text_title"
        android:id="@+id/edit_text_portions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/portions_number"
        android:inputType="number"/>

    <EditText
        android:layout_below="@id/edit_text_portions"
        android:id="@+id/edit_text_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredients"
        android:inputType="textMultiLine"/>

    <EditText
        android:layout_below="@id/edit_text_ingredients"
        android:id="@+id/edit_text_preparationInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prepInstructions"
        android:inputType="textMultiLine"/>





    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:tint="@android:color/white"
        android:src="@drawable/ic_done" />

</RelativeLayout>