<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_view_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipeTitle"
                android:maxLines="1"
                android:layout_toStartOf="@id/image_view_image"
                android:layout_alignParentStart="true"
                android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/text_view_portions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_name"
                android:text="@string/portions_number"/>

            <TextView
                android:id="@+id/text_view_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_portions"
                android:text="@string/ingredients"/>

            <TextView
                android:id="@+id/text_view_preparationInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_ingredients"
                android:text="lorem ipsum dolor"/>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>